[project]
name = "hexlet-code"
version = "0.1.0"
description = "Набор консольных математических игр Brain Games (учебный проект Hexlet)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kamil Kayumov", email = "kamilkayumov@gmail.com" },
]
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[project.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
